# resume

./: 404.html  Makefile  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yaml
docs/: index.md  profile.md
docs/en/: index.md  profile.md
docs/pt_BR/: index.md  profile.md
en/: index.html
en/profile/: index.html
pt_BR/: index.html
pt_BR/profile/: index.html
search/: search_index.json
