[tool.poetry]
name = "resume"
version = "0.1.0"
description = ""
authors = ["Gustavo Soares <gustavo.soares.cdc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = {extras = ["i18n"], version = "^1.2.3"}
mkdocs-material = "^8.2.5"
mkdocs-git-revision-date-plugin = "^0.3.1"
mkdocs-git-revision-date-localized-plugin = "^1.0.0"
mkdocs-blogging-plugin = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
